# ClimateMemes

./: README.md  pyproject.toml
code/: llava.py  llava_backbone.py  llava_embedding.py  molmo.py  molmo_backbone.py  molmo_embedding.py
dataset/: test_split.csv  train_split.csv
